Don't crash if there's no input subfeature

Apaprently not all sensors have an "input" subfeature for example
some can only have an "average" subfeature.
BUG:439615
FIXED-IN:5.22.4


(cherry picked from commit 70550a94e1752a8adad577574ab3b051088f5a61)